force-app/main/default/objects/Preference_Notification__c/Preference_Notification__c.object-meta.xml
<CustomObject>
    <label>Preference Notification</label>
    <nameField>
        <label>Preference Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences Notification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>