force-app/main/default/objects/Preference_Notification__c/fields/Email_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Email_Livraison__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Livraison</label>
    <type>Checkbox</type>
</CustomField>