force-app/main/default/objects/Preference_Notification__c/fields/Email_SAV__c.field-meta.xml
<CustomField>
    <fullName>Email_SAV__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email SAV</label>
    <type>Checkbox</type>
</CustomField>