force-app/main/default/objects/Preference_Notification__c/fields/Langue_Preference__c.field-meta.xml
<CustomField>
    <fullName>Langue_Preference__c</fullName>
    <label>Langue Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>