force-app/main/default/objects/Preference_Notification__c/fields/SMS_Livraison__c.field-meta.xml
<CustomField>
    <fullName>SMS_Livraison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Livraison</label>
    <type>Checkbox</type>
</CustomField>