force-app/main/default/objects/Preference_Notification__c/fields/SMS_SAV__c.field-meta.xml
<CustomField>
    <fullName>SMS_SAV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS SAV</label>
    <type>Checkbox</type>
</CustomField>