force-app/main/default/objects/Preference_Notification__c/fields/Telephone_SMS__c.field-meta.xml
<CustomField>
    <fullName>Telephone_SMS__c</fullName>
    <label>Telephone SMS</label>
    <type>Phone</type>
</CustomField>